<resources>
    <string name="app_name">ToDo List</string>
    <string name="title">Judul</string>
    <string name="tambah">Tambah</string>
    <string name="judul">Judul</string>
    <string name="note">Catatan</string>
    <string name="empty">Empty Data</string>
    <string name="add">Tambah Data</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="waktu">Waktu</string>
    <string name="tenggat">Tenggat</string>
    <string name="sort">Urutkan</string>
    <string name="tanggal_buat">Tanggal Buat</string>
    <string name="tenggat_waktu">Tenggat Waktu</string>
    <string name="search">Cari Judul</string>
    <string name="notifikasi">Ingatkan 1 jam sebelum waktu tenggat</string>

    <string-array name="edit_delete">
        <item>Detail</item>
        <item>Sunting</item>
        <item>Hapus</item>
    </string-array>
</resources>
